# auth_server

./: Cargo.toml  Readme.md
src/: lib.rs  main.rs
src/config/: hash.rs  mod.rs  token.rs
src/db/: user.rs
src/errors/: mod.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/models/: auth.rs  mod.rs  token.rs  user.rs
src/server/: mod.rs  routes.rs
tests/: extracting_credentials.rs  health_check.rs  singup_test.rs  user_test.rs
tests/common/: mod.rs
