[package]
name = "auth-server"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#async runtime
tokio = { version = "1.17.0", features = ["full"] }

#web server framework
warp = "0.3.2"

#framework for serializing and de-serializing Rust data structures
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

#load environment variables and set app configuration
dotenv = "0.15"
config = "0.10"

#db connection handler
mobc = "0.7.3"
mobc-postgres = "0.7.0"

#Error and debug handlers
thiserror = "1.0.34"
tracing = "0.1"
