[package]
name = "authserver"
version = "0.1.2"
edition = "2021"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "authserver"

[dev-dependencies]
reqwest = { version="0.11.11", features = ["blocking"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#async runtime
tokio = { version = "1.17.0", features = ["full"] }

#web server framework
warp = "0.3.2"

#framework for serializing and de-serializing Rust data structures
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

#load environment variables and set app configuration
dotenv = "0.15"
config = "0.10"

#db connection handler
mobc = "0.7.3"
mobc-postgres = { version= "0.7.0", features = ["with-uuid-0_8"] }

uuid = { version = "0.8", features = [ "v4" , "serde"] }

#Error and debug handlers
thiserror = "1.0.34"
tracing = "0.1"
validator = { version = "0.12", features = ["derive"] }


#Authorization tools
base64 = "0.13.0"
secrecy = "0.8.0"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }

#Token tools
chrono = "0.4.22"
jsonwebtoken = "8.1.1"